# MEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Framework/: CMakeLists.txt  CoreAPI.h  EntryPoint.cpp
Framework/Application/: ApplicationAPI.h  CMakeLists.txt
Framework/Application/Include/APP_Generic/: AbstractApplication.h  AbstractApplicationWindow.h  AbstractCursor.h  ApplicationEventHandler.h  ApplicationEventHandlerFwd.h  GenericPlatformApplicationAccessPort.h  WindowDefinition.h
Framework/Application/Include/Containers/: KeyCharContainer.h  KeyInputInfoContainer.h
Framework/Application/Include/HAL/: PlatformApplication.h  PlatformApplicationAccessPort.h  PlatformGlobals.h
Framework/Application/Include/Interfaces/: IApplicationInterface.h
Framework/Application/Include/Macro/: ApplicationDefines.h  FunctionSymbolHelpers.h
Framework/Application/Include/Null/: NullApplication.h  NullApplicationEventHandler.h  NullApplicationWindow.h  NullPlatformCursor.h  NullPlatformGlobals.h
Framework/Application/Include/Windows/: WindowsPlatformApplication.h  WindowsPlatformApplicationAccessPort.h  WindowsPlatformApplicationInstance.h  WindowsPlatformCursor.h  WindowsPlatformGlobals.h  WindowsPlatformWindow.h  WindowsPlatformWindowHandle.h
Framework/Application/Internal/EventBuilders/: KeyCharContainerBuilder.cpp  KeyCharContainerBuilder.h  KeyInputInfoContainerBuilder.cpp  KeyInputInfoContainerBuilder.h
Framework/Application/Internal/Factories/: ApplicationEventHandlerFactory.h
Framework/Application/Internal/Windows/: WindowsDeferredMessage.h
Framework/Application/Src/APP_Generic/: AbstractApplication.cpp  AbstractCursor.cpp  AbstractPlatformWindow.cpp  ApplicationEventHandlerFactory.cpp  GenericPlatformApplicationAccessPort.cpp
Framework/Application/Src/Null/: NullApplication.cpp  NullApplicationEventHandler.cpp  NullApplicationWindow.cpp  NullPlatformCursor.cpp
Framework/Application/Src/Windows/: WindowsPlatformApplication.cpp  WindowsPlatformApplicationAccessPort.cpp  WindowsPlatformApplicationInstance.cpp  WindowsPlatformCursor.cpp  WindowsPlatformGlobals.cpp  WindowsPlatformWindow.cpp  WindowsPlatformWindowHandle.cpp
Framework/Core/: CMakeLists.txt
Framework/Core/Include/: CoreDefines.h  CoreDynamicModule.h
Framework/Core/Include/Allocation/: Allocator.h
Framework/Core/Include/Debugging/: Debugger.h
Framework/Core/Include/Delegates/: AbstractDelegate.h  AbstractMulticastDelegate.h  Delegate.h  DelegateFactory.h  DelegateImpl.h  DelegateInstanceImpl.h  DelegateInstanceImplFwd.h  FunctionPointerTypeTraits.h  IDelegateInstanceInterface.h  IDelegateInterface.h  IEventListener.h  MulticastDelegateImpl.h
Framework/Core/Include/Event/: EventInstanceFwd.h  IEventInstanceInterface.h  IEventInterface.h  KeyEventInstances.h  MouseEventInstance.h  WindowEvent.h  WindowEventInstances.h
Framework/Core/Include/Generic/: GenericPlatformLowLevelAccessPort.h  GenericPlatformMath.h  GenericPlatformStringUtility.h  GenericTypeDefines.h
Framework/Core/Include/Globals/: CoreGlobals.h
Framework/Core/Include/HAL/: Platform.h  PlatformFileSystem.h  PlatformHeader.h  PlatformLowLevelAccessPort.h  PlatformMacroHelper.h  PlatformMath.h  PlatformStringUtility.h  PreprocessorHelpers.h
Framework/Core/Src/: CoreDynamicModule.cpp
Framework/Extensions/Primitive/: StaticExtension.h
Framework/OTGT/: CMakeLists.txt  OTGTAPI.h
Framework/OpenGLDriver/: CMakeLists.txt  OpenGLDriverDefines.h
Framework/OpenGLDriver/Include/: HALOpenGLThirdParty.h  OpenGLDriverRHIModule.h  OpenGLUtils.h
Framework/OpenGLDriver/Src/: GenericPlatformOpenGLDriver.h  OpenGLCommands.cpp  OpenGLCommands.h  OpenGLDriverRHI.cpp  OpenGLDriverRHI.h  OpenGLDriverRHIModule.cpp  OpenGLFwd.h  OpenGLPipelineState.cpp  OpenGLPipelineState.h  OpenGLRHIBackendPrivate.cpp  OpenGLResource.cpp  OpenGLResource.h  OpenGLShaders.cpp  OpenGLShaders.h  OpenGLState.cpp  OpenGLState.h  OpenGLTypeTraits.h  OpenGLVertexInputLayout.cpp  OpenGLVertexInputLayout.h  OpenGLViewport.cpp  OpenGLViewport.h  PlatformOpenGLDriver.h  PlatformOpenGLDriverGlobals.cpp  PlatformOpenGLDriverGlobals.h
Framework/RHI/: CMakeLists.txt  RHIDefines.h
Framework/RHI/Include/: RHIBackend.h  RHICommand.h  RHICommandList.h  RHIConcepts.h  RHIContext.h  RHIDefines.h  RHIFwd.h  RHIGlobals.h  RHIModule.h  RHIPipeline.h  RHIPlatform.h  RHITypes.h
Framework/RHI/Src/: RHICommandExecutions.cpp  RHICommandList.cpp  RHIGlobals.cpp
Framework/Runtime/: CMakeLists.txt
Framework/Runtime/CoreObject/: CMakeLists.txt
Framework/Runtime/ECSCore/: CMakeLists.txt
Framework/Runtime/EventSystem/: CMakeLists.txt
Framework/Runtime/FutureFlexCore/: CMakeLists.txt  FutureFlexCoreAPI.h
Framework/Runtime/InputCore/: CMakeLists.txt  InputCoreAPI.h
Framework/Runtime/Launch/: CMakeLists.txt
Game/: CMakeLists.txt  GameAPI.h
Game/Include/: GameDefines.h  SampleGame.h
Game/Src/: SampleGame.cpp
Sources/: CMakeLists.txt  CoreAPI.h  EntryPoint.cpp
Sources/Application/: ApplicationAPI.h  CMakeLists.txt
Sources/Application/Include/: ApplicationDefines.h
Sources/Core/: CMakeLists.txt  CoreAPI.cpp  CoreAPI.h  EntryPoint.cpp
Sources/Core/Generic/: GenericPlatformMath.h  GenericTypeDefines.h
Sources/Core/HAL/: Platform.h  PlatformHeader.h  PlatformMath.h  PreprocessorHelpers.h
Sources/Core/Launch/: EntryPoint.cpp
Sources/Core/Macro/: AssertionMacros.h  CPPVerMacro.h  ClassMacroHelpers.h  TypeAliasMacro.h
Sources/Core/Math/: Axis.h  MEngineMathUtility.h  MathForward.h  Vector.cpp  Vector.h  Vector2D.h  VectorImpl.cpp
Sources/Core/Misc/: CoreDefines.h
Sources/Core/Templates/: METypeAmbiguityResolve.h  METypeTraits.h
Sources/Core/Type/: GenericTypeDefines.h
Sources/Core/Windows/: WindowsPlatform.h  WindowsPlatformMath.h
Sources/Game/: CMakeLists.txt  GameAPI.h
Sources/Game/Include/: GameDefines.h  SampleGame.h
Sources/Game/Src/: SampleGame.cpp
Sources/OTGT/: CMakeLists.txt  OTGTAPI.h
Sources/OTGT/Include/: OTGTAPI.h
Sources/Runtime/Launch/: EngineLoop.h
Sources/Utilities/: CMakeLists.txt
(+187 files in other folders)
